--- a/.github/workflows/examples.presets.yml
+++ b/.github/workflows/examples.presets.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   examples:
     runs-on: ubuntu-latest
-    if: "github.repository == 'lowlighter/metrics'"
+    if: "github.repository == 'siosios/metrics'"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
