--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           user: siosios
           template: classic
           base: header, activity, community, repositories
-          config_timezone: Europe/Berlin
+          config_timezone: Us/Chicago
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
