--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -48,9 +48,9 @@ jobs:
     steps:
     - name: check-spelling
       id: spelling
-      uses: check-spelling/check-spelling@v0.0.20
+      uses: check-spelling/check-spelling@v0.0.24
       with:
-        experimental_apply_changes_via_bot: ${{ github.repository_owner != 'lowlighter' && 1 || 0 }}
+        experimental_apply_changes_via_bot: ${{ github.repository_owner != 'siosios' && 1 || 0 }}
         suppress_push_for_open_pull_request: 1
         checkout: true
         post_comment: 0
@@ -74,11 +74,11 @@ jobs:
     if: (success() || failure()) && needs.spelling.outputs.followup
     steps:
     - name: comment
-      uses: check-spelling/check-spelling@v0.0.20
+      uses: check-spelling/check-spelling@v0.0.24
       with:
         checkout: true
         task: ${{ needs.spelling.outputs.followup }}
-        experimental_apply_changes_via_bot: ${{ github.repository_owner != 'lowlighter' && 1 || 0 }}
+        experimental_apply_changes_via_bot: ${{ github.repository_owner != 'siosios' && 1 || 0 }}
 
   update:
     name: Update PR
@@ -87,7 +87,7 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     if: ${{
-        github.repository_owner != 'lowlighter' &&
+        github.repository_owner != 'siosios' &&
         github.event_name == 'issue_comment' &&
         github.event.issue.pull_request &&
         contains(github.event.comment.body, '@check-spelling-bot apply')
@@ -97,8 +97,8 @@ jobs:
       cancel-in-progress: false
     steps:
     - name: apply spelling updates
-      uses: check-spelling/check-spelling@v0.0.20
+      uses: check-spelling/check-spelling@v0.0.24
       with:
-        experimental_apply_changes_via_bot: ${{ github.repository_owner != 'lowlighter' && 1 || 0 }}
+        experimental_apply_changes_via_bot: ${{ github.repository_owner != 'siosios' && 1 || 0 }}
         checkout: true
         ssh_key: "${{ secrets.CHECK_SPELLING }}"
