--- a/.github/workflows/metrics-extended.yml
+++ b/.github/workflows/metrics-extended.yml
@@ -49,3 +49,14 @@ jobs:
           plugin_stargazers_days: 14
           plugin_traffic: yes
           plugin_repositories_featured: Netdata-on-Ipfire, autoinstall_cloudstack
+          plugin_code: yes
+          plugin_code_days: 3
+          plugin_code_lines: 12
+          plugin_code_load: 400
+          plugin_code_visibility: public
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+          plugin_lines: yes
+          plugin_lines_history_limit: 1
+          plugin_lines_repositories_limit: 4
+          plugin_lines_sections: base
