--- a/.github/workflows/examples.presets.yml
+++ b/.github/workflows/examples.presets.yml
@@ -1,4 +1,4 @@
-name: Publish examples (presets)
+crename: Publish examples (presets)
 on:
   schedule:
     - cron: "0 16 1/2 * *"
@@ -22,6 +22,6 @@ jobs:
       - name: Publish presets examples
         run: npm run presets -- publish
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.github.token }}
 
 
