--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     pull-request-branch-name:
       separator: "-"
     reviewers:
-      - lowlighter
+      - siosios
     commit-message:
       prefix: "chore(deps)"
     ignore:
