--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -45,4 +45,4 @@ jobs:
         run: ./delete_workflows.sh siosios/metrics
         working-directory: .github/actions/ghcr-clean
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
