--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
           git checkout master
           git pull
       - name: Setup metrics
-        run: npm ci
+        run: npm install
       - name: Publish rebuild metrics indexes
         run: npm run build -- publish
 
@@ -188,7 +188,7 @@ jobs:
         with:
           node-version: 20
       - name: Setup metrics
-        run: npm ci
+        run: npm install
       - name: Pull
         run: git pull
       - name: Checkout latest
@@ -239,7 +239,7 @@ jobs:
         with:
           node-version: 20
       - name: Setup metrics
-        run: npm ci
+        run: npm install
       - name: Publish release
         run: node .github/scripts/release.mjs
         env:
