--- a/.github/workflows/test.presets.yml
+++ b/.github/workflows/test.presets.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 20
       - name: Setup metrics
-        run: npm ci
+        run: npm install
       - name: Run tests
         run: npm run test-presets
         env:
