--- a/.github/workflows/examples.presets.yml
+++ b/.github/workflows/examples.presets.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           node-version: 20
       - name: Setup metrics
-        run: npm ci
+        run: npm install
       - name: Publish presets examples
         run: npm run presets -- publish
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
