--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   build-test-analyze:
     name: Build, test and analyze
     if: "!contains(github.event.head_commit.message, '[skip test]')"
-    uses: lowlighter/metrics/.github/workflows/test.yml@master
+    uses: siosios/metrics/.github/workflows/test.yml@master
 
   # Format code
   format:
@@ -74,9 +74,9 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build docker image
-        run: docker build -t ghcr.io/lowlighter/metrics:master .
+        run: docker build -t ghcr.io/siosios/metrics:master .
       - name: Publish to GitHub registry
-        run: docker push ghcr.io/lowlighter/metrics:master
+        run: docker push ghcr.io/siosios/metrics:master
       - name: Tag docker image (beta) and publish to GitHub registry
         run: |
           set +e
@@ -85,17 +85,17 @@ jobs:
           set -e
           if [[ ! -z "$METRICS_VERSION" ]]; then
             echo "Beta version: v$METRICS_VERSION_BETA"
-            docker tag ghcr.io/lowlighter/metrics:master ghcr.io/lowlighter/metrics:$(echo "v$METRICS_VERSION_BETA")
-            docker push ghcr.io/lowlighter/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker push ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
           fi
       - name: Tag docker image (main) and publish to GitHub registry
         run: |
-          docker tag ghcr.io/lowlighter/metrics:master ghcr.io/lowlighter/metrics:main
-          docker push ghcr.io/lowlighter/metrics:main
+          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:main
+          docker push ghcr.io/siosios/metrics:main
 
   # Deploy to beta-metrics.lecoq.io
   deploy-master:
-    name: Deploy lowlighter/metrics@master
+    name: Deploy siosios/metrics@master
     runs-on: ubuntu-latest
     needs: [ docker-master ]
     steps:
@@ -106,9 +106,9 @@ jobs:
       - name: Check deployment status
         run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
 
-  # Test lowlighter/metrics@master
+  # Test siosios/metrics@master
   action-master-test:
-    name: Test lowlighter/metrics@master
+    name: Test siosios/metrics@master
     runs-on: ubuntu-latest
     needs: [ docker-master ]
     steps:
@@ -125,7 +125,7 @@ jobs:
   publish-examples:
     name: Publish examples
     needs: [ action-master-test ]
-    uses: lowlighter/metrics/.github/workflows/examples.yml@master
+    uses: siosios/metrics/.github/workflows/examples.yml@master
     secrets:
       METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
       METRICS_TOKEN_WITH_SCOPES: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
@@ -145,7 +145,7 @@ jobs:
   publish-examples-presets:
     name: Publish examples (presets)
     needs: [ action-master-test ]
-    uses: lowlighter/metrics/.github/workflows/examples.presets.yml@master
+    uses: siosios/metrics/.github/workflows/examples.presets.yml@master
 
   # Build docker image from master and publish it to GitHub registry with release tag
   docker-release:
@@ -159,19 +159,19 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Pull docker image (master)
-        run: docker pull ghcr.io/lowlighter/metrics:master
+        run: docker pull ghcr.io/siosios/metrics:master
       - name: Tag docker image (release)
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker tag ghcr.io/lowlighter/metrics:master ghcr.io/lowlighter/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Publish release to GitHub registry
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker push ghcr.io/lowlighter/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Tag docker image (latest)
-        run: docker tag ghcr.io/lowlighter/metrics:master ghcr.io/lowlighter/metrics:latest
+        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
       - name: Publish latest to GitHub registry
-        run: docker push ghcr.io/lowlighter/metrics:latest
+        run: docker push ghcr.io/siosios/metrics:latest
 
   # Rebase latest branch on master
   update-latest:
@@ -198,9 +198,9 @@ jobs:
       - name: Push latest
         run: git push origin latest
 
-  # Test lowlighter/metrics@latest
+  # Test siosios/metrics@latest
   action-latest-test:
-    name: Test lowlighter/metrics@latest
+    name: Test siosios/metrics@latest
     runs-on: ubuntu-latest
     needs: [ update-latest ]
     steps:
@@ -215,7 +215,7 @@ jobs:
 
   # Deploy to metrics.lecoq.io
   deploy-latest:
-    name: Deploy lowlighter/metrics@latest
+    name: Deploy siosios/metrics@latest
     runs-on: ubuntu-latest
     needs: [ docker-release, deploy-master ]
     steps:
