--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
   # Build, test and analyze
   build-test-analyze:
     name: Build, test and analyze
-    if: "!contains(github.event.head_commit.message, '[skip test]')"
+    if: "contains(github.event.head_commit.message, '[skip test]')"
     uses: siosios/metrics/.github/workflows/test.yml@master
 
   # Format code
@@ -17,7 +17,7 @@ jobs:
     name: Format code
     runs-on: ubuntu-latest
     needs: [ build-test-analyze ]
-    if: always() && (needs.build-test-analyze.result == 'success' || needs.build-test-analyze.result == 'skipped')
+    #if: always() && (needs.build-test-analyze.result == 'success' || needs.build-test-analyze.result == 'skipped')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
