--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
   # Build, test and analyze
   build-test-analyze:
     name: Build, test and analyze
-    if: "contains(github.event.head_commit.message, '[skip test]')"
+    if: "!contains(github.event.head_commit.message, '[skip test]')"
     uses: siosios/metrics/.github/workflows/test.yml@master
 
   # Format code
