--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   build-test-analyze:
     name: Build, test and analyze
     if: "!contains(github.event.head_commit.message, '[skip test]')"
-    uses: siosios/metrics/.github/workflows/test.yml@master
+    uses: siosios/metrics/.github/workflows/test.yml@main
 
   # Format code
   format:
@@ -24,7 +24,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Checkout master
-        run: git checkout master
+        run: git checkout main
       - name: Format code
         run: |
           npm install -g dprint
@@ -56,7 +56,7 @@ jobs:
           node-version: 20
       - name: Pull changes
         run: |
-          git checkout master
+          git checkout main
           git pull
       - name: Setup metrics
         run: npm install
@@ -113,12 +113,12 @@ jobs:
           fi
       - name: Tag docker image (main) and publish to GitHub registry
         run: |
-          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:main
+          docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:main
           docker push ghcr.io/siosios/metrics:main
 
   # Deploy to beta-metrics.lecoq.io
   deploy-master:
-    name: Deploy siosios/metrics@master
+    name: Deploy siosios/metrics@main
     runs-on: ubuntu-latest
     needs: [ docker-master ]
     steps:
@@ -131,12 +131,12 @@ jobs:
 
   # Test siosios/metrics@master
   action-master-test:
-    name: Test siosios/metrics@master
+    name: Test siosios/metrics@main
     runs-on: ubuntu-latest
     needs: [ docker-master ]
     steps:
       - name: Run tests
-        uses: siosios/metrics@master
+        uses: siosios/metrics@main
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -168,7 +168,7 @@ jobs:
   publish-examples-presets:
     name: Publish examples (presets)
     needs: [ action-master-test ]
-    uses: siosios/metrics/.github/workflows/examples.presets.yml@master
+    uses: siosios/metrics/.github/workflows/examples.presets.yml@main
 
   # Build docker image from master and publish it to GitHub registry with release tag
   docker-release:
@@ -182,17 +182,17 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Pull docker image (master)
-        run: docker pull ghcr.io/siosios/metrics:master
+        run: docker pull ghcr.io/siosios/metrics:main
       - name: Tag docker image (release)
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Publish release to GitHub registry
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Tag docker image (latest)
-        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
+        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:latest
       - name: Publish latest to GitHub registry
         run: docker push ghcr.io/siosios/metrics:latest
 
