--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
   format:
     name: Format code
     runs-on: ubuntu-latest
-    needs: [ build-test-analyze ]
+    #needs: [ build-test-analyze ]
     #if: always() && (needs.build-test-analyze.result == 'success' || needs.build-test-analyze.result == 'skipped')
     steps:
       - name: Checkout repository
