--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Continuous integration
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
@@ -10,7 +10,7 @@ jobs:
   build-test-analyze:
     name: Build, test and analyze
     if: "!contains(github.event.head_commit.message, '[skip test]')"
-    uses: siosios/metrics/.github/workflows/test.yml@master
+    uses: siosios/metrics/.github/workflows/test.yml@main
 
   # Format code
   format:
@@ -23,8 +23,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Checkout master
-        run: git checkout master
+      - name: Checkout main
+        run: git checkout main
       - name: Format code
         run: |
           npm install -g dprint
@@ -58,7 +58,7 @@ jobs:
           node-version: 20
       - name: Pull changes
         run: |
-          git checkout master
+          git checkout main
           git pull
       - name: Setup metrics
         run: npm install
@@ -67,7 +67,7 @@ jobs:
 
   # Build docker image from master and publish it to GitHub registry
   docker-master:
-    name: Publish master to GitHub registry
+    name: Publish main to GitHub registry
     runs-on: ubuntu-latest
     needs: [ update-indexes ]
     steps:
@@ -76,9 +76,9 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build docker image
-        run: docker build -t ghcr.io/siosios/metrics:master .
+        run: docker build -t ghcr.io/siosios/metrics:main .
       - name: Publish to GitHub registry
-        run: docker push ghcr.io/siosios/metrics:master
+        run: docker push ghcr.io/siosios/metrics:main
       - name: Tag docker image (beta) and publish to GitHub registry
         run: |
           set +e
@@ -87,17 +87,17 @@ jobs:
           set -e
           if [[ ! -z "$METRICS_VERSION" ]]; then
             echo "Beta version: v$METRICS_VERSION_BETA"
-            docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
             docker push ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
           fi
       - name: Tag docker image (main) and publish to GitHub registry
         run: |
-          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:main
+          docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:main
           docker push ghcr.io/siosios/metrics:main
 
   # Deploy to beta-metrics.lecoq.io
   deploy-master:
-    name: Deploy siosios/metrics@master
+    name: Deploy siosios/metrics@main
     runs-on: ubuntu-latest
     needs: [ docker-master ]
     steps:
@@ -110,7 +110,7 @@ jobs:
 
   # Test siosios/metrics@master
   action-master-test:
-    name: Test siosios/metrics@master
+    name: Test siosios/metrics@main
     runs-on: ubuntu-latest
     needs: [ docker-master ]
     steps:
@@ -127,7 +127,7 @@ jobs:
   publish-examples:
     name: Publish examples
     needs: [ action-master-test ]
-    uses: siosios/metrics/.github/workflows/examples.yml@master
+    uses: siosios/metrics/.github/workflows/examples.yml@main
     secrets:
       METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
       METRICS_TOKEN_WITH_SCOPES: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
@@ -147,7 +147,7 @@ jobs:
   publish-examples-presets:
     name: Publish examples (presets)
     needs: [ action-master-test ]
-    uses: siosios/metrics/.github/workflows/examples.presets.yml@master
+    uses: siosios/metrics/.github/workflows/examples.presets.yml@main
 
   # Build docker image from master and publish it to GitHub registry with release tag
   docker-release:
@@ -161,23 +161,23 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Pull docker image (master)
-        run: docker pull ghcr.io/siosios/metrics:master
+        run: docker pull ghcr.io/siosios/metrics:main
       - name: Tag docker image (release)
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Publish release to GitHub registry
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Tag docker image (latest)
-        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
+        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:latest
       - name: Publish latest to GitHub registry
         run: docker push ghcr.io/siosios/metrics:latest
 
   # Rebase latest branch on master
   update-latest:
-    name: Rebase latest on master
+    name: Rebase latest on main
     runs-on: ubuntu-latest
     needs: [ docker-release ]
     steps:
@@ -196,7 +196,7 @@ jobs:
       - name: Checkout latest
         run: git checkout latest
       - name: Rebase latest on master
-        run: git merge master
+        run: git merge main
       - name: Push latest
         run: git push origin latest
 
