--- a/tests/cases/activity.plugin.yml
+++ b/tests/cases/activity.plugin.yml
@@ -1,5 +1,5 @@
 - name: 📰 Recent activity - Recent activity
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: MOCKED_TOKEN
     plugin_activity: 'yes'
