--- a/tests/cases/discussions.plugin.yml
+++ b/tests/cases/discussions.plugin.yml
@@ -1,5 +1,5 @@
 - name: 💬 Discussions - GitHub Discussions
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: MOCKED_TOKEN
     plugin_discussions: 'yes'
