--- a/tests/cases/anilist.plugin.yml
+++ b/tests/cases/anilist.plugin.yml
@@ -1,7 +1,7 @@
 - name: >-
     🌸 Anilist watch list and reading list - Favorites anime and currently
     watching
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: NOT_NEEDED
     plugin_anilist: 'yes'
@@ -13,7 +13,7 @@
 - name: >-
     🌸 Anilist watch list and reading list - Favorites manga and currently
     reading
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: NOT_NEEDED
     plugin_anilist: 'yes'
@@ -23,7 +23,7 @@
     use_mocked_data: 'yes'
     verify: 'yes'
 - name: 🌸 Anilist watch list and reading list - Favorites characters
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: NOT_NEEDED
     plugin_anilist: 'yes'
