--- a/tests/cases/community.template.yml
+++ b/tests/cases/community.template.yml
@@ -1,5 +1,5 @@
 - name: 📕 Community templates - Using a community template
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: MOCKED_TOKEN
     template: "@classic"
@@ -9,7 +9,7 @@
   modes:
     - action
 - name: 📕 Community templates - Using a trusted community template
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: MOCKED_TOKEN
     template: "@terminal"
