--- a/tests/cases/markdown.template.yml
+++ b/tests/cases/markdown.template.yml
@@ -1,5 +1,5 @@
 - name: 📒 Markdown template - Example
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     template: markdown
     markdown: >-
@@ -9,7 +9,7 @@
     use_mocked_data: yes
     verify: yes
 - name: 📒 Markdown template - Example with plugins configuration for embed use
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     template: markdown
     markdown: >-
@@ -35,7 +35,7 @@
     use_mocked_data: yes
     verify: yes
 - name: 📒 Markdown template - Example (pdf output)
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     template: markdown
     markdown: >-
