--- a/tests/cases/projects.plugin.yml
+++ b/tests/cases/projects.plugin.yml
@@ -1,5 +1,5 @@
 - name: 🗂️ GitHub projects - Project from a repository
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: MOCKED_TOKEN
     plugin_projects: 'yes'
