--- a/tests/cases/repositories.plugin.yml
+++ b/tests/cases/repositories.plugin.yml
@@ -1,13 +1,13 @@
 - name: 📓 Featured repositories - Featured repositories
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: MOCKED_TOKEN
     plugin_repositories: 'yes'
-    plugin_repositories_featured: lowlighter/metrics
+    plugin_repositories_featured: siosios/metrics
     use_mocked_data: 'yes'
     verify: 'yes'
 - name: 📓 Featured repositories - Pinned repositories
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     token: MOCKED_TOKEN
     plugin_repositories: 'yes'
