--- a/tests/cases/repository.template.yml
+++ b/tests/cases/repository.template.yml
@@ -1,13 +1,13 @@
 - name: 📘 Repository template - Example
-  uses: mikey-/metrics@latest
+  uses: siosios/metrics@main
   with:
     template: repository
     token: MOCKED_TOKEN
-    user: lowlighter
+    user: siosios
     repo: metrics
     plugin_lines: yes
     plugin_followup: yes
     plugin_projects: yes
-    plugin_projects_repositories: lowlighter/metrics/projects/1
+    plugin_projects_repositories: siosios/metrics/projects/1
     use_mocked_data: yes
     verify: yes
