--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,17 +96,17 @@ jobs:
           docker push ghcr.io/siosios/metrics:main
 
   # Deploy to beta-metrics.lecoq.io
-  deploy-master:
-    name: Deploy siosios/metrics@main
-    runs-on: ubuntu-latest
-    needs: [ docker-master ]
-    steps:
-      - name: Deploy web instance
-        run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
-      - name: Wait for redeploy
-        run: sleep 120
-      - name: Check deployment status
-        run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
+  #deploy-master:
+  #  name: Deploy siosios/metrics@main
+  #  runs-on: ubuntu-latest
+  #  needs: [ docker-master ]
+  #  steps:
+  #    - name: Deploy web instance
+  #      run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
+   #   - name: Wait for redeploy
+   #     run: sleep 120
+   #   - name: Check deployment status
+   #     run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
 
   # Test siosios/metrics@master
   action-master-test:
@@ -216,17 +216,17 @@ jobs:
           verify: yes
 
   # Deploy to metrics.lecoq.io
-  deploy-latest:
-    name: Deploy siosios/metrics@latest
-    runs-on: ubuntu-latest
-    needs: [ docker-release, deploy-master ]
-    steps:
-      - name: Deploy web instance
-        run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
-      - name: Wait for redeploy
-        run: sleep 120
-      - name: Check deployment status
-        run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
+ # deploy-latest:
+  #  name: Deploy siosios/metrics@latest
+  #  runs-on: ubuntu-latest
+ #   needs: [ docker-release, deploy-master ]
+ #   steps:
+ #     - name: Deploy web instance
+ #       run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
+  #    - name: Wait for redeploy
+ #       run: sleep 120
+ #     - name: Check deployment status
+ #       run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
 
   # Publish GitHub release
   publish-release:
