--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -232,7 +232,7 @@ jobs:
   publish-release:
     name: Publish release
     runs-on: ubuntu-latest
-    needs: [ action-latest-test, deploy-latest ]
+    needs: [ action-latest-test ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
