--- a/tests/cases/16personalities.plugin.yml
+++ b/tests/cases/16personalities.plugin.yml
@@ -2,7 +2,7 @@
   uses: siosios/metrics@main
   with:
     token: MOCKED_TOKEN
-    plugin_16personalities: 'yes'
+    plugin_16personalities: 'no'
     plugin_16personalities_url: https://www.16personalities.com/profiles/infp-t/o/f9r5dethb
     plugin_16personalities_sections: personality, traits
     plugin_16personalities_scores: 'no'
