--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,8 @@ jobs:
         run: |
           git checkout main
           git pull
+      - name: npm audit
+        run: npm audit fix --force
       - name: Setup metrics
         run: npm install
       - name: Publish rebuild metrics indexes
