--- a/tests/cases/16personalities.plugin.yml
+++ b/tests/cases/16personalities.plugin.yml
@@ -7,4 +7,4 @@
     plugin_16personalities_sections: personality, traits
     plugin_16personalities_scores: 'no'
     use_mocked_data: 'yes'
-    verify: 'yes'
+    verify: 'no'
