--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,14 @@ name: Continuous integration
 permissions: write-all
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   #Build, test and analyze
   build-test-analyze:
     name: Build, test and analyze
     if: "!contains(github.event.head_commit.message, '[skip test]')"
-    uses: siosios/metrics/.github/workflows/test.yml@main
+    uses: siosios/metrics/.github/workflows/test.yml@master
 
   # Format code
   format:
@@ -22,8 +22,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Checkout main
-        run: git checkout main
+      - name: Checkout master
+        run: git checkout master
       - name: Format code
         run: |
           npm install -g dprint
@@ -57,7 +57,7 @@ jobs:
           node-version: 20
       - name: Pull changes
         run: |
-          git checkout main
+          git checkout master
           git pull
       - name: Setup metrics
         run: npm install
@@ -68,7 +68,7 @@ jobs:
 
   # Build docker image from master and publish it to GitHub registry
   docker-master:
-    name: Publish main to GitHub registry
+    name: Publish master to GitHub registry
     runs-on: self-hosted
     needs: [ update-indexes ]
     steps:
@@ -77,9 +77,9 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build docker image
-        run: docker build -t ghcr.io/siosios/metrics:main .
+        run: docker build -t ghcr.io/siosios/metrics:master .
       - name: Publish to GitHub registry
-        run: docker push ghcr.io/siosios/metrics:main
+        run: docker push ghcr.io/siosios/metrics:master
       - name: Tag docker image (beta) and publish to GitHub registry
         run: |
           set +e
@@ -88,17 +88,17 @@ jobs:
           set -e
           if [[ ! -z "$METRICS_VERSION" ]]; then
             echo "Beta version: v$METRICS_VERSION_BETA"
-            docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
             docker push ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
           fi
-      - name: Tag docker image (main) and publish to GitHub registry
+      - name: Tag docker image (master) and publish to GitHub registry
         run: |
-          docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:main
-          docker push ghcr.io/siosios/metrics:main
+          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:master
+          docker push ghcr.io/siosios/metrics:master
 
   # Deploy to beta-metrics.lecoq.io
   #deploy-master:
-  #  name: Deploy siosios/metrics@main
+  #  name: Deploy siosios/metrics@master
   #  runs-on: ubuntu-latest
   #  needs: [ docker-master ]
   #  steps:
@@ -111,12 +111,12 @@ jobs:
 
   # Test siosios/metrics@master
   action-master-test:
-    name: Test siosios/metrics@main
+    name: Test siosios/metrics@master
     runs-on: self-hosted
     needs: [ docker-master ]
     steps:
       - name: Run tests
-        uses: siosios/metrics@main
+        uses: siosios/metrics@master
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -128,7 +128,7 @@ jobs:
   publish-examples:
     name: Publish examples
     needs: [ action-master-test ]
-    uses: siosios/metrics/.github/workflows/examples.yml@main
+    uses: siosios/metrics/.github/workflows/examples.yml@master
     secrets:
       METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
       METRICS_TOKEN_WITH_SCOPES: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
@@ -147,7 +147,7 @@ jobs:
   publish-examples-presets:
     name: Publish examples (presets)
     needs: [ action-master-test ]
-    uses: siosios/metrics/.github/workflows/examples.presets.yml@main
+    uses: siosios/metrics/.github/workflows/examples.presets.yml@master
 
   # Build docker image from master and publish it to GitHub registry with release tag
   docker-release:
@@ -160,24 +160,24 @@ jobs:
         uses: actions/checkout@v4
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Pull docker image (main)
-        run: docker pull ghcr.io/siosios/metrics:main
+      - name: Pull docker image (master)
+        run: docker pull ghcr.io/siosios/metrics:master
       - name: Tag docker image (release)
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Publish release to GitHub registry
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Tag docker image (latest)
-        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:latest
+        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
       - name: Publish latest to GitHub registry
         run: docker push ghcr.io/siosios/metrics:latest
 
   # Rebase latest branch on master
   update-latest:
-    name: Rebase latest on main
+    name: Rebase latest on master
     runs-on: self-hosted
     needs: [ docker-release ]
     steps:
@@ -195,8 +195,8 @@ jobs:
         run: git pull
       - name: Checkout latest
         run: git checkout latest
-      - name: Rebase latest on main
-        run: git merge main
+      - name: Rebase latest on master
+        run: git merge master
       - name: Push latest
         run: git push origin latest
 
