--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -41,6 +41,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Chmod script
+        run: chmod +x .github/actions/ghcr-clean/delete_workflows.sh
       - name: Run script
         run: ./delete_workflows.sh siosios/metrics
         working-directory: .github/actions/ghcr-clean
