--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build, test and analyze
     runs-on: self-hosted
     if: "!contains(github.event.head_commit.message, '[skip test]')"
-    uses: siosios/metrics/.github/workflows/test.yml@master
+    uses: siosios/Metrics/.github/workflows/test.yml@master
 
 
   # Format code
@@ -44,7 +44,7 @@ jobs:
 
   # Update plugins and template indexes, along with README.md
   update-indexes:
-    name: Publish rebuilt metrics indexes
+    name: Publish rebuilt Metrics indexes
     runs-on: self-hosted
     needs: [ format ]
     permissions:
@@ -62,11 +62,11 @@ jobs:
         run: |
           git checkout master
           git pull
-      - name: Setup metrics
+      - name: Setup Metrics
         run: npm install
       - name: npm audit
         run: npm audit fix --force
-      - name: Publish rebuild metrics indexes
+      - name: Publish rebuild Metrics indexes
         run: npm run build --publish
 
   # Build docker image from master and publish it to GitHub registry
@@ -80,46 +80,46 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build docker image
-        run: docker build -t ghcr.io/siosios/metrics:master .
+        run: docker build -t ghcr.io/siosios/Metrics:master .
       - name: Publish to GitHub registry
-        run: docker push ghcr.io/siosios/metrics:master
+        run: docker push ghcr.io/siosios/Metrics:master
       - name: Tag docker image (beta) and publish to GitHub registry
         run: |
           set +e
-          METRICS_VERSION=$(cat package.json | grep -Po '(?<="version": ")\d+[.]\d+(?=[.]0-beta")')
-          METRICS_VERSION_BETA="$METRICS_VERSION-beta"
+          Metrics_VERSION=$(cat package.json | grep -Po '(?<="version": ")\d+[.]\d+(?=[.]0-beta")')
+          Metrics_VERSION_BETA="$Metrics_VERSION-beta"
           set -e
-          if [[ ! -z "$METRICS_VERSION" ]]; then
-            echo "Beta version: v$METRICS_VERSION_BETA"
-            docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
-            docker push ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+          if [[ ! -z "$Metrics_VERSION" ]]; then
+            echo "Beta version: v$Metrics_VERSION_BETA"
+            docker tag ghcr.io/siosios/Metrics:master ghcr.io/siosios/Metrics:$(echo "v$Metrics_VERSION_BETA")
+            docker push ghcr.io/siosios/Metrics:$(echo "v$Metrics_VERSION_BETA")
           fi
       - name: Tag docker image (master) and publish to GitHub registry
         run: |
-          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:master
-          docker push ghcr.io/siosios/metrics:master
+          docker tag ghcr.io/siosios/Metrics:master ghcr.io/siosios/Metrics:master
+          docker push ghcr.io/siosios/Metrics:master
 
-  # Deploy to beta-metrics.lecoq.io
+  # Deploy to beta-Metrics.lecoq.io
   #deploy-master:
-  #  name: Deploy siosios/metrics@master
+  #  name: Deploy siosios/Metrics@master
   #  runs-on: ubuntu-latest
   #  needs: [ docker-master ]
   #  steps:
   #    - name: Deploy web instance
-  #      run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
+  #      run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-Metrics.lecoq.io/.control/stop"
    #   - name: Wait for redeploy
    #     run: sleep 120
    #   - name: Check deployment status
-   #     run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
+   #     run: "curl --retry 15 --retry-delay 60 https://beta-Metrics.lecoq.io/.version"
 
-  # Test siosios/metrics@master
+  # Test siosios/Metrics@master
   action-master-test:
-    name: Test siosios/metrics@master
+    name: Test siosios/Metrics@master
     runs-on: self-hosted
     needs: [ docker-master ]
     steps:
       - name: Run tests
-        uses: siosios/metrics@master
+        uses: siosios/Metrics@master
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -131,11 +131,11 @@ jobs:
   publish-examples:
     name: Publish examples
     needs: [ action-master-test ]
-    uses: siosios/metrics/.github/workflows/examples.yml@master
+    uses: siosios/Metrics/.github/workflows/examples.yml@master
     secrets:
-      METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
-      METRICS_TOKEN_WITH_SCOPES: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
-      METRICS_TOKEN_PERSONAL: ${{ secrets.METRICS_TOKEN_PERSONAL }}
+      Metrics_TOKEN: ${{ secrets.Metrics_TOKEN }}
+      Metrics_TOKEN_WITH_SCOPES: ${{ secrets.Metrics_TOKEN_WITH_SCOPES }}
+      Metrics_TOKEN_PERSONAL: ${{ secrets.Metrics_TOKEN_PERSONAL }}
       CHESS_TOKEN: ${{ secrets.CHESS_TOKEN }}
       PAGESPEED_TOKEN: ${{ secrets.PAGESPEED_TOKEN }}
       GOOGLE_MAP_TOKEN: ${{ secrets.GOOGLE_MAP_TOKEN }}
@@ -150,7 +150,7 @@ jobs:
   publish-examples-presets:
     name: Publish examples (presets)
     needs: [ action-master-test ]
-    uses: siosios/metrics/.github/workflows/examples.presets.yml@master
+    uses: siosios/Metrics/.github/workflows/examples.presets.yml@master
 
   # Build docker image from master and publish it to GitHub registry with release tag
   docker-release:
@@ -164,19 +164,19 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Pull docker image (master)
-        run: docker pull ghcr.io/siosios/metrics:master
+        run: docker pull ghcr.io/siosios/Metrics:master
       - name: Tag docker image (release)
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker tag ghcr.io/siosios/Metrics:master ghcr.io/siosios/Metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Publish release to GitHub registry
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker push ghcr.io/siosios/Metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Tag docker image (latest)
-        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
+        run: docker tag ghcr.io/siosios/Metrics:master ghcr.io/siosios/Metrics:latest
       - name: Publish latest to GitHub registry
-        run: docker push ghcr.io/siosios/metrics:latest
+        run: docker push ghcr.io/siosios/Metrics:latest
 
   # Rebase latest branch on master
   update-latest:
@@ -192,7 +192,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Setup metrics
+      - name: Setup Metrics
         run: npm install
       - name: Pull
         run: git pull
@@ -203,14 +203,14 @@ jobs:
       - name: Push latest
         run: git push origin latest
 
-  # Test siosios/metrics@latest
+  # Test siosios/Metrics@latest
   action-latest-test:
-    name: Test siosios/metrics@latest
+    name: Test siosios/Metrics@latest
     runs-on: self-hosted
     needs: [ update-latest ]
     steps:
       - name: Run tests
-        uses: siosios/metrics@latest
+        uses: siosios/Metrics@latest
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -218,18 +218,18 @@ jobs:
           use_mocked_data: yes
           verify: yes
 
-  # Deploy to metrics.lecoq.io
+  # Deploy to Metrics.lecoq.io
  # deploy-latest:
-  #  name: Deploy siosios/metrics@latest
+  #  name: Deploy siosios/Metrics@latest
   #  runs-on: ubuntu-latest
  #   needs: [ docker-release, deploy-master ]
  #   steps:
  #     - name: Deploy web instance
- #       run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
+ #       run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://Metrics.lecoq.io/.control/stop"
   #    - name: Wait for redeploy
  #       run: sleep 120
  #     - name: Check deployment status
- #       run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
+ #       run: "curl --retry 15 --retry-delay 60 https://Metrics.lecoq.io/.version"
 
   # Publish GitHub release
   publish-release:
@@ -243,7 +243,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Setup metrics
+      - name: Setup Metrics
         run: npm install
       - name: Publish release
         run: node .github/scripts/release.mjs
