--- a/.github/workflows/metrics-brief.yml
+++ b/.github/workflows/metrics-brief.yml
@@ -8,13 +8,13 @@ on:
   push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment: 
       name: production
     permissions:
       contents: write
     steps:
-      - uses: siosios/metrics@master
+      - uses: siosios/Metrics@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           filename: github-metrics-brief.svg
