--- a/.github/workflows/metrics-minimal.yml
+++ b/.github/workflows/metrics-minimal.yml
@@ -14,7 +14,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: siosios/metrics@master
+      - uses: siosios/Metrics@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           filename: github-metrics-minimal.svg
