--- a/.github/workflows/test.presets.yml
+++ b/.github/workflows/test.presets.yml
@@ -13,7 +13,7 @@ jobs:
 
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
