--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -37,7 +37,7 @@ jobs:
 # ======================================================================================
 
   examples:
-    runs-on: self-josted
+    runs-on: self-hosted
     if: "github.repository == 'siosios/metrics'"
     steps:
       - name: Checkout repository
@@ -1292,7 +1292,7 @@ jobs:
 # ======================================================================================
 
   repository:
-    runs-on: self-josted
+    runs-on: self-hosted
     needs: [ examples ]
     if: "github.repository == 'siosios/metrics'"
     steps:
