--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
     name: Publish master to GitHub registry
     runs-on: self-hosted
     needs: [ update-indexes ]
+    permissions: write-all
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
