--- a/.github/workflows/examples.presets.yml
+++ b/.github/workflows/examples.presets.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Publish presets examples
         run: npm run presets -- publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
 
