--- a/.github/workflows/repo.yml
+++ b/.github/workflows/repo.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Fetch and process repo data
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
         run: |
           python - <<EOF
           from github import Github
