modify more tokens

--- a/source/plugins/base/examples.yml
+++ b/source/plugins/base/examples.yml
@@ -2,5 +2,5 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.base.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: header, activity, community, repositories, metadata
