--- a/source/plugins/gists/examples.yml
+++ b/source/plugins/gists/examples.yml
@@ -2,6 +2,6 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.gists.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_gists: yes
