--- a/source/plugins/habits/examples.yml
+++ b/source/plugins/habits/examples.yml
@@ -2,7 +2,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.habits.facts.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_habits: yes
     plugin_habits_facts: yes
@@ -13,7 +13,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.habits.charts.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_habits: yes
     plugin_habits_facts: no
