--- a/source/plugins/lines/examples.yml
+++ b/source/plugins/lines/examples.yml
@@ -2,7 +2,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.lines.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: repositories
     plugin_lines: yes
     plugin_lines_delay: 30
@@ -11,7 +11,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.lines.history.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_lines: yes
     plugin_lines_delay: 30
