--- a/source/plugins/projects/examples.yml
+++ b/source/plugins/projects/examples.yml
@@ -2,7 +2,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.projects.svg
-    token: ${{ secrets.metrics_TOKEN_WITH_SCOPES }}
+    token: ${{ github.token_WITH_SCOPES }}
     base: ""
     plugin_projects: yes
     plugin_projects_repositories: siosios/metrics/projects/1
