--- a/source/templates/repository/examples.yml
+++ b/source/templates/repository/examples.yml
@@ -3,7 +3,7 @@
   with:
     template: repository
     filename: metrics.repository.svg
-    token: ${{ secrets.metrics_TOKEN_WITH_SCOPES }}
+    token: ${{ github.token }}
     user: siosios
     repo: metrics
     plugin_lines: yes
