--- a/source/plugins/code/examples.yml
+++ b/source/plugins/code/examples.yml
@@ -2,7 +2,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.code.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_code: yes
     plugin_code_languages: javascript, typescript
