--- a/source/plugins/discussions/examples.yml
+++ b/source/plugins/discussions/examples.yml
@@ -2,7 +2,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.discussions.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_discussions: yes
     plugin_discussions_categories_limit: 8
