--- a/source/plugins/reactions/examples.yml
+++ b/source/plugins/reactions/examples.yml
@@ -2,7 +2,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.reactions.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_reactions: yes
     plugin_reactions_limit: 100
