--- a/source/plugins/stargazers/examples.yml
+++ b/source/plugins/stargazers/examples.yml
@@ -2,7 +2,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.stargazers.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_stargazers: yes
 
@@ -10,7 +10,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.stargazers.graph.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_stargazers: yes
     plugin_stargazers_charts_type: graph
@@ -19,7 +19,7 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.plugin.stargazers.worldmap.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: ""
     plugin_stargazers: yes
     plugin_stargazers_charts: no
