--- a/source/templates/classic/examples.yml
+++ b/source/templates/classic/examples.yml
@@ -2,6 +2,6 @@
   uses: siosios/metrics@latest
   with:
     filename: metrics.classic.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: header, repositories
     plugin_lines: yes
