--- a/source/templates/markdown/examples.yml
+++ b/source/templates/markdown/examples.yml
@@ -5,7 +5,7 @@
     filename: metrics.markdown.md
     markdown: https://raw.githubusercontent.com/siosios/metrics/examples/metrics.markdown.template.md
     config_output: markdown
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
   prod:
     with:
       output_action: commit
@@ -34,7 +34,7 @@
     plugin_topics_limit: 24
     plugin_isocalendar: yes
     plugin_languages: yes
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
   prod:
     with:
       output_action: commit
