--- a/source/templates/terminal/examples.yml
+++ b/source/templates/terminal/examples.yml
@@ -3,5 +3,5 @@
   with:
     template: terminal
     filename: metrics.terminal.svg
-    token: ${{ secrets.metrics_TOKEN }}
+    token: ${{ github.token }}
     base: header, metadata
